	X-Box; Titel anpassbar durch XBOX_CAPTION
	
	* phonebook: als Bibliothek in den Callmonitor laden

2006-04-02

	callmonitor-0.8 veröffentlicht

	Vorbereitungen für die Umstellung auf das JFritz-Interface

2006-04-05

	* callmonitor: Veraltetes Action-Interface entfernt: MSISDN, CALLER, CALLED

2006-04-07

	Umstellung auf das JFritz-Interface: Das telefon-Paket wird nicht mehr
	benötigt; das Format der "Listeners" hat sich geändert.

	* mail.sh: mail_missed_call existiert nicht mehr; durch "in:cancel ...
	mailmessage ..." ersetzt.

	English translation (Web interface and messages)

	callmonitor-1.0 veröffentlicht

2006-04-14

	* if_jfritz.sh: Abschließendes "#" bei gewählten Rufnummern entfernen.
	* dial.sh: Wählhilfe: dial NUMBER [PORT]
	* callmonitor.cgi.sh: JFritz ein- und ausschalten direkt über das
	Webinterface

2006-04-17: Ostermontag

	* callaction: Einfaches Skript, um Callmonitor-Aktionen von außerhalb
	aufrufen zu können.

2006-04-23:

	* if_jfritz.sh: EXT-Wert wurde nicht von out:request zu out:cancel
	übernommen.

	* check: Syntax-Check für die Listeners

	callmonitor-1.1 veröffentlicht

2006-05-06:

	* dial: Port wurde erst beim zweiten Aufruf richtig benutzt
	(Reihenfolge der POST-Parameter ist wichtig)

2006-05-13:

	* getmsg: Versteht nun auch vollständige URLs:

	    getmsg [OPTION]... <full-url-template> [<message>]...
	    <full-url-template>    http://<authority><partial-url-template>
	    <part-url-template>    e.g., /path/to/resource?query=string&message=%s
	    <authority>            [user[:password]@]host[:port]

	Bei der herkömmlichen Aufrufart können in ähnlicher Weise Port,
	Benutzer und Passwort in einem Argument angegeben werden. Diese
	Angaben überschreiben eventuell vorhandene Optionen (--port etc.).

	    getmsg [OPTION]... <authority> <part-url-template> [<message>]...
	    getmsg [OPTION]... -t <part-url-template> <authority> [<message>]...

2006-05-14:

	callmonitor-1.2 veröffentlicht